--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"@material-ui/core": "^4.12.4",
+		"history": "^4.10.1",
 		"loft-taxi-mui-theme": "^1.2.0",
 		"mapbox-gl": "^2.8.2",
 		"prop-types": "^15.8.1",
