--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.9.0",
+		"@emotion/styled": "^11.8.1",
 		"@material-ui/core": "^4.12.4",
+		"@mui/material": "^5.8.2",
 		"history": "^4.10.1",
 		"loft-taxi-mui-theme": "^1.2.0",
 		"mapbox-gl": "^2.8.2",
