--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@emotion/styled": "^11.8.1",
 		"@material-ui/core": "^4.12.4",
 		"@mui/material": "^5.8.2",
+		"classnames": "^2.3.1",
 		"history": "^4.10.1",
 		"loft-taxi-mui-theme": "^1.2.0",
 		"mapbox-gl": "^2.8.2",
