--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@date-io/date-fns": "^2.14.0",
 		"@emotion/react": "^11.9.0",
 		"@emotion/styled": "^11.8.1",
 		"@material-ui/core": "^4.12.4",
@@ -19,6 +20,7 @@
 		"react-scripts": "5.0.1",
 		"redux": "^4.2.0",
 		"redux-saga": "^1.1.3",
+		"styled-components": "^5.3.5",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
