--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"mapbox-gl": "^2.8.2",
 		"prop-types": "^15.8.1",
 		"react": "^18.1.0",
+		"react-burger-menu": "^3.0.8",
 		"react-datepicker": "^4.8.0",
 		"react-dom": "^18.1.0",
 		"react-hook-form": "^7.32.1",
