--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"@testing-library/react-hooks": "^8.0.0",
 		"enzyme": "^3.11.0",
 		"enzyme-adapter-react-16": "^1.15.6",
-		"react-test-renderer": "^16.14.0"
+		"react-test-renderer": "^16.14.0",
+		"redux-mock-store": "^1.5.4"
 	}
 }
